# gubbi-common

./: .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CODEMAP.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: cross-repo-validate.yml  gitleaks.yml  test.yml
docs/: RELEASING.md
gubbi_common/: __init__.py  constants.py  correlation.py
gubbi_common/audit/: __init__.py  actions.py  sql.py  targets.py
gubbi_common/auth/: __init__.py  bearer_challenge.py  gateway_signature.py  hydra.py  prm.py
gubbi_common/bootstrap/: __init__.py  pg_log_probe.py
gubbi_common/budget/: __init__.py  constants.py  helper.py  keys.py  period.py
gubbi_common/db/: __init__.py  user_scoped.py
gubbi_common/http/: __init__.py  client_ip.py
gubbi_common/middleware/: __init__.py  correlation.py
gubbi_common/telemetry/: __init__.py  allowlist.py  bound_logger.py  correlation_processor.py  logging.py  otel.py
tests/: test_constants.py  test_correlation.py  test_smoke.py  test_version_coherence.py
tests/audit/: test_actions.py  test_sql.py  test_targets.py
tests/auth/: test_bearer_challenge.py  test_gateway_signature.py  test_hydra.py  test_prm.py
tests/bootstrap/: test_pg_log_probe.py
tests/budget/: test_budget_helper.py  test_budget_keys.py  test_budget_period.py
tests/db/: test_user_scoped.py  test_user_scoped_readonly.py
tests/http/: test_client_ip.py
tests/integration/: conftest.py  test_audit_dedup.py  test_audit_schema_drift.py  test_fixture_smoke.py
tests/middleware/: test_correlation.py
tests/telemetry/: conftest.py  test_allowlist.py  test_bound_logger.py  test_correlation_processor.py  test_initialize_logger.py  test_logging.py  test_otel.py  test_safe_instrument.py
tests/tools/: test_check_gubbi_common_purity.py
tools/: check_gubbi_common_purity.py
