[tool.poetry]
name = "gubbi-common"
version = "0.7.0"
description = "Shared contracts (audit, auth, telemetry) for Gubbi packages"
authors = ["madhukar01 <mholla8@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "gubbi_common"}]

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = {version = ">=0.29,<0.31", optional = true}
starlette = ">=0.41,<1.0"
structlog = "^24.4.0"
opentelemetry-api = ">=1.29.0,<2.0"
opentelemetry-sdk = ">=1.29.0,<2.0"
opentelemetry-exporter-otlp-proto-grpc = ">=1.29.0,<2.0"

[tool.poetry.extras]
db = ["asyncpg"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.25.0"  # TIGHT: pre-1.0; minor bumps shift loop-scope semantics. Harmonised with gubbi + gubbi-cloud.
pytest-cov = "^6.0.0"
pre-commit = "^3.5.0"
# TIGHT: ruff format-rule changes between minors mass-rewrite source.
# Caret on a 0.x already means <0.9; do not relax without a coordinated reformat commit.
ruff = "^0.8.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "ANN", "S", "A", "C4", "T20", "PT", "RET", "SIM"]
ignore = ["ANN401", "N818"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PT011", "S105", "S106", "S107", "ANN", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["gubbi_common"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
disable_error_code = "import-untyped"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "strict"
markers = [
    "unit: fast, isolated unit tests with no external dependencies",
]
