[tool.poetry]
name = "gubbi-common"
version = "0.13.1"
description = "Shared contracts (audit, auth, telemetry) for Gubbi packages"
authors = ["madhukar01 <mholla8@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "gubbi_common"}]

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = {version = ">=0.29,<0.31", optional = true}
starlette = ">=0.41,<1.0"
structlog = "^24.4.0"
opentelemetry-api = ">=1.29.0,<2.0"
opentelemetry-sdk = ">=1.29.0,<2.0"
opentelemetry-exporter-otlp-proto-grpc = ">=1.29.0,<2.0"

[tool.poetry.extras]
db = ["asyncpg"]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"  # TIGHT: pytest 9 requires pytest-asyncio >= 1.x. 1.0 introduced loop-scope semantics changes; ``asyncio_mode = "strict"`` (see [tool.pytest.ini_options]) plus per-test ``@pytest.mark.asyncio`` keeps fixtures explicit. Pin floor matches lock-resolved version so consumers pinning the same constraint get reproducible behavior. Harmonised with gubbi + gubbi-cloud (Wave 4 follows). Closes CVE-2025-71176 (pytest <9.0.3 world-readable /tmp/pytest-of-{user} on multi-user hosts).
pytest-cov = "^6.0.0"
pre-commit = "^3.5.0"
# TIGHT: ruff format-rule changes between minors mass-rewrite source.
# Caret on a 0.x already means <0.9; do not relax without a coordinated reformat commit.
ruff = "^0.8.0"
mypy = "^1.13.0"
# Integration tests in tests/integration use testcontainers to spin a
# pgvector/pgvector:pg16 Postgres for asyncpg-against-real-DB coverage
# (audit dedup, schema drift). Gated behind ``INTEGRATION=1`` env var
# so the default lane never requires Docker.
testcontainers = {version = "^4.8", extras = ["postgres"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E", "F", "B", "I", "N", "UP", "ANN", "S", "A", "C4", "T20", "PT", "RET", "SIM",
    # Docstring presence + format. D101/D102/D103 enforce public-class /
    # method / function docstrings; D200/D205/D400 enforce summary-line
    # format. Adopted from meepo-conventions baseline; tests/ are exempt
    # via per-file-ignores below.
    "D101", "D102", "D103", "D200", "D205", "D400",
]
ignore = ["ANN401", "N818"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PT011", "S105", "S106", "S107", "ANN", "D", "E501", "S603", "S607"]
# tools/ are CLI scripts -- argparse-driven, no untrusted input.
"tools/**/*.py" = ["S603"]

[tool.ruff.lint.isort]
known-first-party = ["gubbi_common"]

[tool.mypy]
# Flag set converged to the union across gubbi / gubbi-cloud / gubbi-common
# (B4 Q1=A). Each strict flag here is also set in at least one sibling repo;
# adding the missing ones removes "works on my repo" surprises when shared
# contracts move between repos. `python_version` is 3.12 to match the
# canonical dev/CI version (and sibling repos); the package floor stays at
# `python = "^3.11"` for self-host compatibility.
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
strict_equality = true
extra_checks = true
no_implicit_reexport = true
disable_error_code = "import-untyped"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: fast, isolated unit tests with no external dependencies",
    "integration: integration tests requiring docker / testcontainers",
]

[tool.coverage.report]
# Floor; ratchet quarterly. Adopted from meepo-conventions baseline;
# starting at 60 (canonical conservative default for a new gate). Bump
# after a coverage-improvement PR observes the steady-state level.
fail_under = 60
